tests/neg/enum-repeated-extend-4470.scala
object RepeatedExtendEnum {

  enum Maybe[T] {
    case Foo extends Maybe[Int]
  }

  enum Maybe[T] {
    case Foo extends Maybe[Int]
  }
}
